<resources>
    <string name="app_name">Frag</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_quit_c">再按一次退出</string>
    <string name="placeHolder">placeHolder</string>
    <string name="seekbar_add">+</string>
    <string name="seekbar_minus">-</string>
    <string name="create">生成</string>
    <string name="scan_failed">扫描失败</string>
    <string name="bottom_hint">建议与镜头保持10CM距离，尽量避免逆光和阴影</string>
    <string name="top_hint">将条形码或二维码置于取景框内系统会自动扫描</string>
    <string name="cancel">取消</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="button_ok">确定</string>
    <string name="progressbar_dialog_txt">正在处理，请稍后...</string>
    <string name="wxarticle_api_title_list">微信精选之%s</string>
    <string name="boxoffice_api_btn_day_cn">实时票房(内地)</string>
    <string name="boxoffice_api_btn_day_hk">实时票房(香港)</string>
    <string name="boxoffice_api_btn_day_us">实时票房(北美)</string>
    <string name="boxoffice_api_btn_week_cn">周票房(内地)</string>
    <string name="boxoffice_api_btn_week_hk">周票房(香港)</string>
    <string name="boxoffice_api_btn_week_us">周票房(北美)</string>
    <string name="boxoffice_api_btn_weekend_cn">周末票房(内地)</string>
    <string name="boxoffice_api_btn_weekend_hk">周末票房(香港)</string>
    <string name="boxoffice_api_btn_weekend_us">周末票房(北美)</string>
    <string name="boxoffice_api_title_result">票房结果</string>
    <string name="boxoffice_api_title_day_cur_cn">当日票房(单位/万元)：</string>
    <string name="boxoffice_api_title_name_cn">电影名称：</string>
    <string name="boxoffice_api_title_days_cn">内地已上映天数：</string>
    <string name="boxoffice_api_title_days_hk">在香港已上映天数：</string>
    <string name="boxoffice_api_title_days_us">在香港已上映天数：</string>
    <string name="boxoffice_api_title_weeks_us">在北美已上映的周数：</string>
    <string name="boxoffice_api_title_sum_cn">内地的总票房(单位/万元)：</string>
    <string name="boxoffice_api_title_sum_hk">香港的总票房(单位/万港元)：</string>
    <string name="boxoffice_api_title_sum_us">北美的总票房(单位/万美元)：</string>
    <string name="boxoffice_api_title_week_sum_cn">内地的周票房(单位/万元)：</string>
    <string name="boxoffice_api_title_week_sum_hk">香港的本周票房(单位/万港元)：</string>
    <string name="boxoffice_api_title_week_period_cn">内地周票房的周期：</string>
    <string name="boxoffice_api_title_week_period_hk">香港周票房的周期：</string>
    <string name="boxoffice_api_title_weekend_sum_us">北美的上周末票房(单位/万美元)：</string>
    <string name="boxoffice_api_title_weekend_sum_cn">内地的上周末票房(单位/万)：</string>
    <string name="boxoffice_api_title_weekend_period_us">北美的上周末周期：</string>
    <string name="boxoffice_api_title_weekend_period_cn">内地周末票房的周期：</string>
    <string name="text_ack_msg">read</string>
    <string name="text_delivered_msg">delivered</string>
    <string name="back">back</string>
    <string name="save">save</string>
    <string name="button_pushtotalk">Hold to talk</string>
    <string name="button_send">send</string>
    <string name="attach_smile">emoticon</string>
    <string name="attach_picture">image</string>
    <string name="attach_take_pic">take a picture</string>
    <string name="attach_location">location</string>
    <string name="attach_file">file</string>
    <string name="attach_voice_call">voice call</string>
    <string name="attach_video_call">video call</string>
    <string name="user_card">business card</string>
    <string name="move_up_to_cancel">slide up cancel sending</string>
    <string name="release_to_cancel">release finger to cancel sending</string>
    <string name="send_fail">send failed</string>
    <string name="delete_message">delete message</string>
    <string name="delete_conversation_messages">delete conversation and messages</string>
    <string name="delete_conversation">delete conversation</string>
    <string name="copy_message">copy message</string>
    <string name="delete_voice">delete voice</string>
    <string name="delete_video">delete video</string>
    <string name="delete">delete</string>
    <string name="resend">resend</string>
    <string name="confirm_resend">confirm to resend？</string>
    <string name="connect_failuer_toast">please check the network or try again later</string>
    <string name="network_unavailable">the network connection is not available, please check the network</string>
    <string name="copy">copy</string>
    <string name="forward">forwarding</string>
    <string name="button_logout">logout</string>
    <string name="button_uploadlog">uplod the log</string>
    <string name="ok">OK</string>
    <string name="prompt">prompt</string>
    <string name="clear_records">clear chat?</string>
    <string name="clear_all_records">clear all chats？</string>
    <string name="location_recv">[%1$s location]</string>
    <string name="location_message">The location information</string>
    <string name="recording_video">record video</string>
    <string name="location_prefix">[my location]</string>
    <string name="voice">voice</string>
    <string name="picture">[picture]</string>
    <string name="video">[video]</string>
    <string name="file">[file]</string>
    <string name="voice_call">[voice call]</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">save</string>
    <string name="button_search">find</string>
    <string name="button_add">add</string>
    <string name="search_header">search</string>
    <string name="network_isnot_available">the network is not available</string>
    <string name="recoding_fail">the recording failure, please try again！</string>
    <string name="select_contacts">select the contact</string>
    <string name="confirm_forward_to">determine the forwarded to：%1$s ?</string>
    <string name="logout">log out</string>
    <string name="logout_hint">logout will never clear the chat history, this account can used on next time user login</string>
    <string name="exit_group_hint">the group messages will not be received after exiting the groups</string>
    <string name="dissolution_group_hint">the group will be dismissed after exiting</string>
    <string name="exit_group">exit</string>
    <string name="connect_conflict">the same account was loggedin in other device</string>
    <string name="em_user_remove">This user has been removed</string>
    <string name="set">settings</string>
    <string name="notify">new message notification</string>
    <string name="newnotify">receiving a new message</string>
    <string name="shake">shake</string>
    <string name="chatset">chat settings</string>
    <string name="yangshengqi">use speaker</string>
    <string name="book_black">black list</string>
    <string name="session">conversation</string>
    <string name="address_book">address book</string>
    <string name="setting">setting</string>
    <string name="now_refresh_list">refreshing contact list</string>
    <string name="Application_and_notify">invitation and notification</string>
    <string name="group_chat">group chat</string>
    <string name="add_friend">add friends</string>
    <string name="search">search</string>
    <string name="black_item">black list</string>
    <string name="diagnose">diagnose</string>
    <string name="Current_version">current version</string>
    <string name="Not_Set">not set</string>
    <string name="Upload_the_log">uploading the log</string>
    <string name="The_new_group_chat">the new group</string>
    <string name="group_name">group name</string>
    <string name="Group_chat_profile">group profile</string>
    <string name="Whether_the_public">is public</string>
    <string name="Open_group_members_invited">group can send invitation</string>
    <string name="Open_group_chat">public group</string>
    <string name="blacklist">black list</string>
    <string name="Empty_the_chat_record">clear chat history</string>
    <string name="Shielding_of_the_message">block message</string>
    <string name="The_dissolution_of_chatting">dismiss group</string>
    <string name="Select_the_contact">select the contact</string>
    <string name="Group_chat_information">the group description</string>
    <string name="Group_of_Lord">the group owner</string>
    <string name="Introduction">brief</string>
    <string name="To_join_the_chat">join the group</string>
    <string name="login">login</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="confirmpassword">confirm password</string>
    <string name="downwaiting">downloading the file, please try again later</string>
    <string name="mute">mute</string>
    <string name="Hands_free">hands free</string>
    <string name="hang_up">hang up</string>
    <string name="answer">answer</string>
    <string name="unable_to_connect">unable to connect to the server</string>
    <string name="newchat">the new chat</string>
    <string name="agree">agree</string>
    <string name="Group_chat">group chat:</string>
    <string name="not_download">Did not download:</string>
    <string name="is_down_please_wait">downloading video, please try again later</string>
    <string name="Exit_the_group_chat">exit the group</string>
    <string name="Please_enter_a_username">Please enter a username</string>
    <string name="not_add_myself">"Can't add myself"</string>
    <string name="This_user_is_already_your_friend">This user is already your friend</string>
    <string name="Add_a_friend">Add a friend?</string>
    <string name="send_successful">Send the request is successful, waiting for the other party</string>
    <string name="Request_add_buddy_failure">Request add buddy failure:</string>
    <string name="Network_error">Network error</string>
    <string name="Making_sure_your_location">Making sure your location...</string>
    <string name="please_check">key validation error!Please on AndroidManifest.xml file check the key set</string>
    <string name="expression">[expression]</string>
    <string name="Removed_from_the_failure">Removed fail</string>
    <string name="be_removing">Be removing</string>
    <string name="call_duration">call duration</string>
    <string name="Refused">Refused</string>
    <string name="The_other_party_has_refused_to">The other party has refused to</string>
    <string name="The_other_is_not_online">The other is not online</string>
    <string name="The_other_is_on_the_phone">The other is on the phone</string>
    <string name="The_other_party_did_not_answer">The other party did not answer</string>
    <string name="did_not_answer">did not answer</string>
    <string name="Has_been_cancelled">Has been cancelled</string>
    <string name="unable_to_get_loaction">Unable to get to your location information!</string>
    <string name="not_connect_to_server">Not connect to server, please try again later</string>
    <string name="sd_card_does_not_exist">"SD card does not exist, can't take pictures"</string>
    <string name="cant_find_pictures">"Can't find pictures"</string>
    <string name="File_does_not_exist">File does not exist</string>
    <string name="The_file_is_not_greater_than_10_m">The file is not greater than 10 m</string>
    <string name="Whether_to_empty_all_chats">Whether to empty all chats</string>
    <string name="Send_voice_need_sdcard_support">Send voice need sdcard support</string>
    <string name="Recording_without_permission">Recording without permission</string>
    <string name="The_recording_time_is_too_short">The recording time is too short</string>
    <string name="send_failure_please">Send failure, please test whether the server connection</string>
    <string name="Move_into_blacklist_success">Move into blacklist success</string>
    <string name="step_number">步\t数</string>
    <string name="distance">行 程</string>
    <string name="calories">热 量</string>
    <string name="km">m</string>
    <string name="calorie">卡路里</string>
</resources>