<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_background"
    tools:context=".StepActivity" >

    <RelativeLayout
        android:id="@+id/RelativeLayout08"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar2"
        android:background="@color/top_bar_normal_bg"
        android:gravity="center_vertical" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:layout_below="@id/RelativeLayout08"
        android:background="@color/top_bar_normal_bg"
        android:gravity="center_vertical" >

        <include layout="@layout/commom_back_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="运动"
            android:textColor="#fff"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/title"
        android:layout_weight="1" >

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" >

            <TextView
                android:id="@+id/show_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="55sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/rl1" >

            <RelativeLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/rrrr" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:text="信号强度" />

                <TextView
                    android:id="@+id/text_satellite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_toRightOf="@+id/work_describe"
                    android:text="0" />

                <TextView
                    android:id="@+id/work_describe"
                    style="@style/small_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/text_local"
                    android:layout_alignParentLeft="true"
                    android:text="运动地点"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/text_local"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/textView1"
                    android:layout_alignParentLeft="true"
                    android:text="x" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rrrr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" >

                <TextView
                    android:id="@+id/work_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="方向"
                    android:textColor="@color/blue" />

                <ImageView
                    android:id="@+id/url_article_img"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_above="@+id/work_position"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/zhinanzhen2" />
            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/step_counter"
            style="@style/small_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rl1"
            android:layout_centerHorizontal="true"
            android:text="@string/step_number"
            android:textColor="@color/blue" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/step_counter"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="21dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="10dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip" >

            <TableLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:stretchColumns="1" >

                <TableRow
                    android:id="@+id/hide1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/small_text_style"
                        android:text="@string/distance"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/distance"
                        style="@style/small_text_style"
                        android:gravity="right"
                        android:textColor="@android:color/black" />

                    <TextView
                        style="@style/small_text_style"
                        android:gravity="right"
                        android:text="@string/km"
                        android:textColor="@android:color/black" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/small_text_style"
                        android:text="@string/calories"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/calories"
                        style="@style/small_text_style"
                        android:gravity="right"
                        android:textColor="@android:color/black" />

                    <TextView
                        style="@style/small_text_style"
                        android:gravity="right"
                        android:text="@string/calorie"
                        android:textColor="@android:color/black" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/small_text_style"
                        android:text="速度"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/velocity"
                        style="@style/small_text_style"
                        android:gravity="right"
                        android:textColor="@android:color/black" />

                    <TextView
                        style="@style/small_text_style"
                        android:gravity="right"
                        android:text="m/s"
                        android:textColor="@android:color/black" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/title_run"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="#DCA60A" >

            <TextView
                android:id="@+id/text_warnning"
                style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="Running"
                android:textColorHint="#000000"
                android:textColorLink="#000000"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/login_error_icon" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>